# dreidel_m5

./: .gitignore  CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  dreidel_m5.c  hello_m5.c
